indicator:

    	    !	    modified
    	    +	    added
    	    -	    deleted
    	    +>	    branched (from elsewhere)
    	    !>	    merged changes (from elsewhere)


----------------
Version 5.004_76        5.005 Public Beta, Issue 2
----------------

____________________________________________________________________________
[  1612] By: gsar                                  on 1998/07/21  07:15:54
        Log: fixes to enable PERL_OBJECT build with mingw32/egcs-1.0.2
     Branch: perl
	   ! ext/Opcode/Opcode.xs proto.h win32/makedef.pl
	   ! win32/makefile.mk win32/perlhost.h win32/win32.c win32/win32.h
           ! win32/win32sck.c
____________________________________________________________________________
[  1611] By: gsar                                  on 1998/07/21  07:12:00
        Log: fix bytecode.pl with moved var names
     Branch: perl
           ! bytecode.pl byterun.c byterun.h ext/B/B/Asmdata.pm
____________________________________________________________________________
[  1610] By: gsar                                  on 1998/07/21  05:51:10
        Log: tweak toke.c
     Branch: perl
           ! toke.c
____________________________________________________________________________
[  1609] By: gsar                                  on 1998/07/21  05:46:59
        Log: change case of PERL_OBJECT filenames, consistent with the rest
     Branch: perl
           + XSlock.h objXSUB.h
           - ObjXSub.h XSLock.h
	   ! MANIFEST XSUB.h lib/ExtUtils/MM_Win32.pm perl.h
           ! win32/GenCAPI.pl win32/Makefile win32/makefile.mk
____________________________________________________________________________
[  1608] By: gsar                                  on 1998/07/21  05:31:13
        Log: part 2 of PERL_OBJECT fixes (globals in bytecode.h moved to intrpvar.h)
     Branch: perl
           ! bytecode.h byterun.c embedvar.h interp.sym intrpvar.h
____________________________________________________________________________