@@ -8,7 +8,7 @@
 
 # Package name      : perl5
 # Source directory  : .
-# Configuration time: Tue Jul 14 13:02:14 EDT 1998
+# Configuration time: Tue Jul 21 10:03:27 EDT 1998
 # Configured by     : doughera
 # Target system     : linux fractal 2.0.34 #1 tue jun 23 10:09:17 edt 1998 i686 unknown 
 
@@ -30,10 +30,10 @@ afs='false'
 alignbytes='4'
 ansi2knr=''
 aphostname=''
-apiversion='5.00474'
+apiversion='5.005'
 ar='ar'
-archlib='/opt/perl/lib/5.00474/i686-linux-thread'
-archlibexp='/opt/perl/lib/5.00474/i686-linux-thread'
+archlib='/opt/perl/lib/5.005/i686-linux-thread'
+archlibexp='/opt/perl/lib/5.005/i686-linux-thread'
 archname='i686-linux-thread'
 archobjs=''
 awk='awk'
@@ -53,7 +53,7 @@ ccdlflags='-rdynamic'
 ccflags='-D_REENTRANT -Dbool=char -DHAS_BOOL -I/usr/local/include'
 cf_by='doughera'
 cf_email='yourname@yourhost.yourplace.com'
-cf_time='Tue Jul 14 13:02:14 EDT 1998'
+cf_time='Tue Jul 21 10:03:27 EDT 1998'
 chgrp=''
 chmod=''
 chown=''
@@ -386,14 +386,14 @@ i_varhdr='stdarg.h'
 i_vfork='undef'
 incpath=''
 inews=''
-installarchlib='/opt/perl/lib/5.00474/i686-linux-thread'
+installarchlib='/opt/perl/lib/5.005/i686-linux-thread'
 installbin='/opt/perl/bin'
 installman1dir='/opt/perl/man/man1'
 installman3dir='/opt/perl/man/man3'
-installprivlib='/opt/perl/lib/5.00474'
+installprivlib='/opt/perl/lib/5.005'
 installscript='/opt/perl/script'
-installsitearch='/opt/perl/lib/site_perl/5.00474/i686-linux-thread'
-installsitelib='/opt/perl/lib/site_perl/5.00474'
+installsitearch='/opt/perl/lib/site_perl/5.005/i686-linux-thread'
+installsitelib='/opt/perl/lib/site_perl/5.005'
 intsize='4'
 known_extensions='B DB_File Data/Dumper Fcntl GDBM_File IO IPC/SysV NDBM_File ODBM_File Opcode POSIX SDBM_File Socket Thread attrs re'
 ksh=''
@@ -466,7 +466,7 @@ osvers='2.0.34'
 package='perl5'
 pager='/usr/bin/less'
 passcat='cat /etc/passwd'
-patchlevel='4'
+patchlevel='5'
 path_sep=':'
 perl='perl'
 perladmin='yourname@yourhost.yourplace.com'
@@ -479,8 +479,8 @@ pmake=''
 pr=''
 prefix='/opt/perl'
 prefixexp='/opt/perl'
-privlib='/opt/perl/lib/5.00474'
-privlibexp='/opt/perl/lib/5.00474'
+privlib='/opt/perl/lib/5.005'
+privlibexp='/opt/perl/lib/5.005'
 prototype='define'
 ptrsize='4'
 randbits='31'
@@ -505,10 +505,10 @@ sig_name='ZERO HUP INT QUIT ILL TRAP ABRT BUS FPE KILL USR1 SEGV USR2 PIPE ALRM 
 sig_name_init='"ZERO", "HUP", "INT", "QUIT", "ILL", "TRAP", "ABRT", "BUS", "FPE", "KILL", "USR1", "SEGV", "USR2", "PIPE", "ALRM", "TERM", "STKFLT", "CHLD", "CONT", "STOP", "TSTP", "TTIN", "TTOU", "URG", "XCPU", "XFSZ", "VTALRM", "PROF", "WINCH", "IO", "PWR", "UNUSED", "IOT", "CLD", "POLL", 0'
 sig_num='0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 6, 17, 29, 0'
 signal_t='void'
-sitearch='/opt/perl/lib/site_perl/5.00474/i686-linux-thread'
-sitearchexp='/opt/perl/lib/site_perl/5.00474/i686-linux-thread'
-sitelib='/opt/perl/lib/site_perl/5.00474'
-sitelibexp='/opt/perl/lib/site_perl/5.00474'
+sitearch='/opt/perl/lib/site_perl/5.005/i686-linux-thread'
+sitearchexp='/opt/perl/lib/site_perl/5.005/i686-linux-thread'
+sitelib='/opt/perl/lib/site_perl/5.005'
+sitelibexp='/opt/perl/lib/site_perl/5.005'
 sizetype='size_t'
 sleep=''
 smail=''
@@ -533,7 +533,7 @@ stdio_filbuf=''
 stdio_ptr='((fp)->_IO_read_ptr)'
 strings='/usr/include/string.h'
 submit=''
-subversion='74'
+subversion='0'
 sysman='/usr/man/man1'
 tail=''
 tar=''
@@ -561,7 +561,7 @@ usethreads='define'
 usevfork='false'
 usrinc='/usr/include'
 uuname=''
-version='5.00474'
+version='5.005'
 vi=''
 voidflags='15'
 xlibpth='/usr/lib/386 /lib/386'
@@ -580,6 +580,6 @@ config_arg6='-Dperladmin=yourname@yourhost.yourplace.com'
 config_arg7='-Dmydomain=.yourplace.com'
 config_arg8='-Dmyhostname=yourhost'
 config_arg9='-dE'
-PATCHLEVEL=4
-SUBVERSION=74
+PATCHLEVEL=5
+SUBVERSION=0
 CONFIG=true
